# Driving-Instructor

./: .dockerignore  .env_example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
docker/: entrypoint-bot.sh  entrypoint-web.sh
schedule/: admin.py  forms.py  models.py  urls.py  views.py
schedule/migrations/: 0001_initial.py  0002_initial.py  0003_lessontime_duration.py  0004_lessontime_schedule_le_instruc_50042d_idx.py  0005_lessontime_attended.py
schedule/templates/schedule/: index.html  lesson_confirm_delete.html  lesson_form.html
telegram_bot/: bot.py  models.py
telegram_bot/migrations/: 0001_initial.py
templates/: base.html
templates/partials/: messages.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_approved.py
users/templates/: home.html
users/templates/registration/: login.html  register.html
